--- a/index.html
+++ b/index.html
@@ -405,9 +405,13 @@
 
         /* --- Социальные кнопки --- */
         .social-btn {
-            display: inline-flex; align-items: center; justify-content: center;
-            padding: 0.7rem 1.5rem; border-radius: 0.5rem; 
-            font-weight: 600; text-decoration: none;
+            display: flex; 
+            align-items: center; 
+            justify-content: center;
+            padding: 0.7rem 1.5rem; 
+            border-radius: 0.5rem; 
+            font-weight: 600; 
+            text-decoration: none;
             transition: var(--transition-smooth);
             gap: 0.6rem; 
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -707,11 +711,11 @@
                     <div class="max-w-md w-full mx-auto grid grid-cols-1 sm:grid-cols-2 gap-4">
                         <a href="https://x.com/DoorDilemma" target="_blank" rel="noopener noreferrer" class="social-btn twitter-x-btn">
                              <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path></svg>
-                            <span>Join on X</span>
+                            <span>Join Twitter</span>
                         </a>
                         <a href="https://t.me/DoorDilemma" target="_blank" rel="noopener noreferrer" class="social-btn telegram-btn">
                             <svg viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path fill-rule="evenodd" d="M21.924 3.536a2.158 2.158 0 00-1.946-.953L2.953 6.852c-1.046.327-1.037 1.01.14 1.33l4.38 1.369 1.37 4.38c.32 1.177 1.003 1.186 1.33.14L17.15 2.953a2.158 2.158 0 00-.953-1.946zM5.99 8.92l9.19-5.69-7.09 7.09-2.1-1.4zm8.06 8.06l-1.4-2.1 7.09-7.09-5.69 9.19z" clip-rule="evenodd"></path></svg>
-                            <span>Join on Telegram</span>
+                            <span>Join Telegram</span>
                         </a>
                     </div>
         
