--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DoorDilemma ($DOOR) - Swing the trade, HODL the shade!</title>
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' rx='5' fill='%230F172A'/><path d='M24 28V6a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v22' fill='%231E293B' stroke='%23334155' stroke-width='1'/><circle cx='12' cy='16' r='2' fill='%23F59E0B'/></svg>">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' rx='5' fill='%230F172A'/><path d='M24 28V6a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v22' fill='%231E293B' stroke='%23334155' stroke-width='1'/><circle cx='12' cy='16' r='2' fill='%23F59E0B'/></svg>">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
